# win-hotkey

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: error.rs  global.rs  hotkey.rs  lib.rs  manager.rs  single_thread.rs  thread_safe.rs
src/keys/: mod.rs  modifiers.rs  vk.rs
