[package]
name = "win-hotkey"
version = "0.1.0"
edition = "2021"
keywords = ["windowing", "window-hotkey", "hotkey"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0xJWLabs/win-hotkey"
repository = "https://github.com/0xJWLabs/win-hotkey"
documentation = "https://docs.rs/win-hotkey"
categories = ["gui"]
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
bitflags = "2.6.0"
keyboard-types = "0.7.0"
thiserror = "2.0.3"
once_cell = "1.20.2"
crossbeam-channel = "0.5.13"

[dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
  "Win32_UI_Input_KeyboardAndMouse",
]
