[package]
name = "win-hotkey"
version = "0.1.2"
description = "Global hotkeys for Desktop Applications on Windows"
edition = "2021"
keywords = ["windowing", "window-hotkey", "hotkey"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0xJWLabs/win-hotkey"
repository = "https://github.com/0xJWLabs/win-hotkey"
documentation = "https://docs.rs/win-hotkey"
categories = ["gui"]
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]

[features]
default = ["thread_safe"]
thread_safe = []

[dependencies]
thiserror = "2.0.3"

[dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
]
