[package]
name = "win-hotkey"
version = "0.2.0"
description = "A lightweight, thread-safe Rust library for managing system-wide hotkeys on Windows, with high-level abstractions and customizable callbacks."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0xJWLabs/win-hotkey"
repository = "https://github.com/0xJWLabs/win-hotkey"
documentation = "https://docs.rs/win-hotkey"
categories = ["os::windows-apis", "api-bindings"]
keywords = ["hotkey", "windows", "system-wide", "global", "win32"]
authors = ["0xJWLabs <0xJWLabs@gmail.com>"]

[features]
default = ["thread_safe"]
thread_safe = []

[dependencies]
rustc-hash = "2.1.0"

[dependencies.windows-sys]
version = "0.59"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
  "aarch64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-pc-windows-msvc",
]
